edit: synchronized the '!join' command with the last command changes