@@ -2,15 +2,18 @@ package kz.ilotterytea.bot.builtin;
 
 import kz.ilotterytea.bot.Huinyabot;
 import kz.ilotterytea.bot.api.commands.Command;
-import kz.ilotterytea.bot.api.permissions.Permissions;
 import kz.ilotterytea.bot.entities.channels.Channel;
 import kz.ilotterytea.bot.entities.channels.ChannelPreferences;
+import kz.ilotterytea.bot.entities.permissions.Permission;
+import kz.ilotterytea.bot.entities.permissions.UserPermission;
 import kz.ilotterytea.bot.entities.users.User;
-import kz.ilotterytea.bot.entities.users.UserPreferences;
 import kz.ilotterytea.bot.i18n.LineIds;
-import kz.ilotterytea.bot.models.ArgumentsModel;
 import kz.ilotterytea.bot.utils.HibernateUtil;
+import kz.ilotterytea.bot.utils.ParsedMessage;
+
 import org.hibernate.Session;
+
+import com.github.twitch4j.chat.events.channel.IRCMessageEvent;
 
 import java.util.*;
 
@@ -19,7 +22,7 @@ import java.util.*;
  * @author ilotterytea
  * @since 1.1
  */
-public class JoinCommand extends Command {
+public class JoinCommand implements Command {
     @Override
     public String getNameId() { return "join"; }
 
@@ -27,91 +30,68 @@ public class JoinCommand extends Command {
     public int getDelay() { return 120000; }
 
     @Override
-    public Permissions getPermissions() { return Permissions.USER; }
+    public Permission getPermissions() { return Permission.USER; }
 
     @Override
-    public ArrayList<String> getOptions() { return new ArrayList<>(Arrays.asList("silent", "тихо", "only-listen")); }
+    public List<String> getOptions() { return List.of("silent", "тихо", "only-listen"); }
 
     @Override
-    public ArrayList<String> getSubcommands() { return new ArrayList<>(); }
+    public List<String> getSubcommands() { return Collections.emptyList(); }
 
     @Override
-    public ArrayList<String> getAliases() { return new ArrayList<>(Arrays.asList("зайти")); }
+    public List<String> getAliases() { return Collections.singletonList("зайти"); }
 
     @Override
-    public String run(ArgumentsModel m) {
+    public Optional<String> run(IRCMessageEvent event, ParsedMessage message, Channel channel, User user, UserPermission permission) {
         Session session = HibernateUtil.getSessionFactory().openSession();
-
-        // Getting the sender's local user info:
-        List<User> users = session.createQuery("from User where aliasId = :aliasId", User.class)
-                .setParameter("aliasId", m.getEvent().getUser().getId())
-                .getResultList();
-
-        User user;
 
         session.getTransaction().begin();
 
-        if (users.isEmpty()) {
-            user = new User(Integer.parseInt(m.getEvent().getUser().getId()), m.getEvent().getUser().getName());
-            UserPreferences preferences = new UserPreferences(user);
-            user.setPreferences(preferences);
-
-            session.persist(user);
-            session.persist(preferences);
-
-            session.getTransaction().commit();
-        } else {
-            user = users.get(0);
-        }
-
-        // Getting the channel's local info if it exists:
-        List<Channel> channels = session.createQuery("from Channel where aliasId = :aliasId", Channel.class)
-                .setParameter("aliasId", m.getEvent().getChannel().getId())
-                .getResultList();
-
-        Channel originChannel = channels.get(0);
-
         // Getting the sender's local channel info if it exists:
-        channels = session.createQuery("from Channel where aliasId = :aliasId", Channel.class)
+        List<Channel> userChannels = session.createQuery("from Channel where aliasId = :aliasId", Channel.class)
                 .setParameter("aliasId", user.getAliasId())
                 .getResultList();
 
-        Channel channel;
+        Channel userChannel;
 
         // Creating a new channel if it does not exist:
-        if (channels.isEmpty()) {
-            channel = new Channel(user.getAliasId(), user.getAliasName());
-            ChannelPreferences preferences = new ChannelPreferences(channel);
-            channel.setPreferences(preferences);
+        if (userChannels.isEmpty()) {
+        	userChannel = new Channel(user.getAliasId(), user.getAliasName());
+            ChannelPreferences preferences = new ChannelPreferences(userChannel);
+            userChannel.setPreferences(preferences);
 
-            session.persist(channel);
+            session.persist(userChannel);
             session.persist(preferences);
 
             session.getTransaction().commit();
         } else {
-            channel = channels.get(0);
+        	userChannel = userChannels.get(0);
 
             // If the channel has already been opt-outed, opt-in:
-            if (channel.getOptOutTimestamp() != null) {
-                channel.setOptOutTimestamp(null);
+            if (userChannel.getOptOutTimestamp() != null) {
+            	userChannel.setOptOutTimestamp(null);
+            	userChannel.setAliasName(user.getAliasName());
+            	
+            	session.persist(userChannel);
+            	session.getTransaction().commit();
             } else {
                 session.close();
-                return Huinyabot.getInstance().getLocale().formattedText(
-                        originChannel.getPreferences().getLanguage(),
+                return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
+                		channel.getPreferences().getLanguage(),
                         LineIds.C_JOIN_ALREADYIN,
                         channel.getAliasName()
-                );
+                ));
             }
         }
 
         session.close();
 
-        Huinyabot.getInstance().getClient().getChat().joinChannel(m.getEvent().getUser().getName());
+        Huinyabot.getInstance().getClient().getChat().joinChannel(userChannel.getAliasName());
 
-        return Huinyabot.getInstance().getLocale().formattedText(
-                originChannel.getPreferences().getLanguage(),
+        return Optional.ofNullable(Huinyabot.getInstance().getLocale().formattedText(
+                channel.getPreferences().getLanguage(),
                 LineIds.C_JOIN_SUCCESS,
-                channel.getAliasName()
-        );
+                userChannel.getAliasName()
+        ));
     }
 }
